# isq

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  DEMO.md  DESIGN.md  MVP.md  PLAN-git-experience.md  PLAN-label-colors.md  README.md  ROADMAP.md  STRATEGY.md  STRATEGY_old.md  TECH_STACK.md
skills/isq/: SKILL.md
src/: auth.rs  credentials.rs  daemon.rs  db.rs  display.rs  forge.rs  github.rs  linear.rs  main.rs  oauth.rs  repo.rs  service.rs
src/forges/: README.md  github.rs  linear.rs  mod.rs
tests/: e2e.rs
