[package]
name = "isq"
version = "0.1.0"
edition = "2024"
description = "A CLI for GitHub issues. Instant. Offline-first. AI-agent native."

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6"
anyhow = "1"
