[package]
name = "isq"
version = "0.1.0"
edition = "2024"
description = "A CLI for GitHub & Linear issues. Instant. Offline-first. AI-agent native."
license = "MIT"
repository = "https://github.com/camwest/isq"
homepage = "https://github.com/camwest/isq"
keywords = ["cli", "github", "linear", "issues", "offline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6"
anyhow = "1"
once_cell = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
colored = "2"
chrono = "0.4"
textwrap = "0.16"
terminal_size = "0.4"
libc = "0.2"
gix = "0.72"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
